syntax = "proto3";
package metrics;

import "delphi.proto";

message LifMetrics {
    option (delphi.datapath_metrics) = true;
    fixed64        Key                       = 1;     // Lif id

    delphi.Counter rx_unicast_bytes          = 2;     // Unicast bytes received at LIF
    delphi.Counter rx_unicast_packets        = 3;     // Unicast packets received at LIF
    delphi.Counter rx_multicast_bytes        = 4;     // Multicast bytes received at LIF
    delphi.Counter rx_multicast_packets      = 5;     // Multicast packets received at LIF
    delphi.Counter rx_broadcast_bytes        = 6;     // Broadcast bytes received at LIF
    delphi.Counter rx_broadcast_packets      = 7;     // Broadcast packets received at LIF
    delphi.Counter __rsvd__0                 = 8;
    delphi.Counter __rsvd__1                 = 9;

    delphi.Counter rx_drop_unicast_bytes     = 10;    // Unicast bytes dropped during received (per LIF)
    delphi.Counter rx_drop_unicast_packets   = 11;    // Unicast packets dropped during received (per LIF)
    delphi.Counter rx_drop_multicast_bytes   = 12;    // Multicast bytes dropped during received (per LIF)
    delphi.Counter rx_drop_multicast_packets = 13;    // Multicast packets dropped during received (per LIF)
    delphi.Counter rx_drop_broadcast_bytes   = 14;    // Broadcast bytes dropped during received (per LIF)
    delphi.Counter rx_drop_broadcast_packets = 15;    // Broadcast packets dropped during received (per LIF)
    delphi.Counter rx_dma_error              = 16;    // Packet DMA errors
    delphi.Counter __rsvd__2                 = 17;

    delphi.Counter tx_unicast_bytes          = 18;    // Unicast bytes transmitted by LIF
    delphi.Counter tx_unicast_packets        = 19;    // Unicast packets transmitted by LIF
    delphi.Counter tx_multicast_bytes        = 20;    // Multicast bytes transmitted by LIF
    delphi.Counter tx_multicast_packets      = 21;    // Multicast packets transmitted by LIF
    delphi.Counter tx_broadcast_bytes        = 22;    // Broadcast bytes transmitted by LIF
    delphi.Counter tx_broadcast_packets      = 23;    // Broadcast packets transmitted by LIF
    delphi.Counter __rsvd__3                 = 24;
    delphi.Counter __rsvd__4                 = 25;

    delphi.Counter tx_drop_unicast_bytes     = 26;    // Unicast bytes dropped during transmit (per LIF)
    delphi.Counter tx_drop_unicast_packets   = 27;    // Unicast packets dropped during transmit (per LIF)
    delphi.Counter tx_drop_multicast_bytes   = 28;    // Multicast bytes dropped during transmit (per LIF)
    delphi.Counter tx_drop_multicast_packets = 29;    // Multicast packets dropped during transmit (per LIF)
    delphi.Counter tx_drop_broadcast_bytes   = 30;    // Broadcast bytes dropped during transmit (per LIF)
    delphi.Counter tx_drop_broadcast_packets = 31;    // Broadcast packets dropped during transmit (per LIF)
    delphi.Counter tx_dma_error              = 32;    // Packet DMA errors
    delphi.Counter __rsvd__5                 = 33;

    delphi.Counter rx_queue_disabled_drops   = 34;    // Packets dropped due to queue disabled
    delphi.Counter rx_queue_empty_drops      = 35;    // Packets dropped due to buffer exhaustion
    delphi.Counter rx_queue_sched            = 36;    // Descriptor fetch errors
    delphi.Counter rx_desc_fetch_error       = 37;    // Descriptor fetch errors
    delphi.Counter rx_desc_data_error        = 38;    // Descriptor fetch errors
    delphi.Counter __rsvd__6                 = 39;
    delphi.Counter __rsvd__7                 = 40;
    delphi.Counter __rsvd__8                 = 41;

    delphi.Counter tx_queue_disabled_drops   = 42;
    delphi.Counter tx_queue_sched            = 43;
    delphi.Counter tx_desc_fetch_error       = 44;
    delphi.Counter tx_desc_data_error        = 45;
    delphi.Counter __rsvd__9                 = 46;
    delphi.Counter __rsvd__10                = 47;
    delphi.Counter __rsvd__11                = 48;
    delphi.Counter __rsvd__12                = 49;

    delphi.Counter rx_rss                    = 50;
    delphi.Counter rx_csum_complete          = 51;
    delphi.Counter rx_ip_bad                 = 52;
    delphi.Counter rx_tcp_bad                = 53;
    delphi.Counter rx_udp_bad                = 54;
    delphi.Counter rx_vlan_strip             = 55;
    delphi.Counter __rsvd__13                = 56;
    delphi.Counter __rsvd__14                = 57;

    delphi.Counter tx_csum_hw                = 58;
    delphi.Counter tx_csum_hw_inner          = 59;
    delphi.Counter tx_vlan_insert            = 60;
    delphi.Counter tx_sg                     = 61;
    delphi.Counter tx_tso_sg                 = 62;
    delphi.Counter tx_tso_sop                = 63;
    delphi.Counter tx_tso_eop                = 64;
    delphi.Counter __rsvd__15                = 65;

    delphi.Counter tx_desc_opc_invalid       = 66;
    delphi.Counter tx_desc_opc_csum_none     = 67;
    delphi.Counter tx_desc_opc_csum_partial  = 68;
    delphi.Counter tx_desc_opc_csum_hw       = 69;
    delphi.Counter tx_desc_opc_csum_tso      = 70;
    delphi.Counter __rsvd__16                = 71;
    delphi.Counter __rsvd__17                = 72;
    delphi.Counter __rsvd__18                = 73;
}
